# Django_projects

./: .gitignore  data.json  pyproject.toml  requirements.txt
blog/: views.py
catalog/: admin.py  forms.py  models.py  permissions.py  urls.py  views.py
catalog/management/commands/: commands.py
catalog/migrations/: 0001_initial.py  0002_category_img_alter_product_date_begin_and_more.py  0003_alter_product_name.py  0004_version.py  0005_alter_version_options_and_more.py  0006_alter_version_activate.py  0007_product_author.py  0008_product_publication.py  0009_alter_product_options.py
catalog/templates/catalog/: category_list.html  product_detail.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
config/: settings.py  urls.py
users/: models.py  views.py
users/migrations/: 0001_initial.py  0002_user_country.py  0003_user_email_verify.py  0004_user_token.py  0005_alter_user_token.py  0006_alter_user_token.py  0007_alter_user_token.py
